2010-05-14  James Youngman  <jay@gnu.org>

	Update Google C++ Test Framework version at bootstrap time.
	* bootstrap.conf (bootstrap_epilogue): call get-gtest.sh at
	bootstrap time.
	* unit-tests/get-gtest.sh: Use svn's --non-interactive option.

	Configure and build googletest in our own configure/Makefile.
	* unit-tests/Makefile.am: Build the Google C++ Testing Framework
	code in this Makefile rather than forcing it to have its own
	configure.
	(EXTRA_DIST): Distribute the googletest copyright notice
	etc. too.
	(gtest_headers): List all the header files.
	(libgtest_a_SOURCES): List the source files separately, and the
	header files.
	(libgtest_main_a_SOURCES): List the header files too.
	* bootstrap.conf (bootstrap_epilogue): googletest now has no
	separate configure step, so no need to bootstrap in that directory
	either.
	* unit-tests/get-gtest.sh: Script for checking out the google unit
	test code.

	Move googletest to unit-tests/googletest.
	* unit-tests/Makefile.am (SUBDIRS): Recurse into googletest.
	Update paths to liibgtest.la.
	* bootstrap.conf (bootstrap_epilogue): bootstrap in uni-tests/googletest.
	* configure.ac: Configure in unit-tests/googletest.
	* Makefile.am (SUBDIRS): Remove googletest (since we moved it).
	* googletest/*: move to unit-tests/googletest/.

	Remove some redundant scripts and .cvsignore files.
	* scripts/rev-freq.sh: Remove unused file.
	* show-disp.sh: Remove unused file.
	* scripts/change-suffix: Remove unused file.
	* .cvsignore, auxfiles/.cvsignore, bsd/.cvsignore,
	docs/.cvsignore, sccs-cgi/.cvsignore, tests/.cvsignore,
	testutils/.cvsignore, unused/.cvsignore: Remove unused files.

	Move CSSC source code to src/ subdirectory.
	* configure.ac: move CSSC source to subdirectory src/.
	* Makefile.am: rename to src/Makefile.am.  The remaining makefile
	just sets SUBDIRS and EXTRA_DIST.
	* admin.cc: moved to src/admin.cc
	* bodyio.cc: moved to src/bodyio.cc
	* bodyio.h: moved to src/bodyio.h